--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
     }
+    allprojects {
+        repositories {
+            jcenter()
+        }
+    }
 }
 
 
