--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -6,4 +6,5 @@ dependencies {
     implementation (name:'WirelessP2p-release', ext:'aar')
     implementation 'org.openftc:rev-extensions-2:1.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.1.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.2.0'
 }
