--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -7,4 +7,5 @@ dependencies {
     implementation 'org.openftc:rev-extensions-2:1.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.1.1'
     implementation 'com.acmerobotics.roadrunner:core:0.2.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
