--- a/build.common.gradle
+++ b/build.common.gradle
@@ -36,6 +36,7 @@ android {
         applicationId 'com.qualcomm.ftcrobotcontroller'
         minSdkVersion 19
         targetSdkVersion 19
+        multiDexEnabled true
 
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
@@ -101,6 +102,9 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
         jcenter()
+    }
+    maven {
+        url 'https://maven.google.com'
     }
 }
 apply from: 'build.release.gradle'
