--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -6,4 +6,5 @@ dependencies {
     implementation (name:'FtcCommon-release', ext: 'aar')
     implementation (name:'WirelessP2p-release', ext:'aar')
     implementation 'org.openftc:rev-extensions-2:1.1'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.2.2'
 }
