--- a/build.common.gradle
+++ b/build.common.gradle
@@ -41,6 +41,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 19
 
+        multiDexEnabled true
+
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
          * the master information published in the AndroidManifest.xml file of the FtcRobotController
