--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation (name: 'WirelessP2p-release', ext:'aar')
     implementation (name: 'tfod-release', ext:'aar')
     implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+    implementation 'org.openftc:rev-extensions-2:1.1'
     implementation 'com.acmerobotics.dashboard:dashboard:0.2.2'
     implementation 'com.acmerobotics.roadrunner:core:0.2.5'
 }
